@@ -1,12 +1,12 @@
 {
   "name": "LHCbDirac",
-  "version": "v8r8p2",
+  "version": "v8r8p3",
   "used_projects": {
     "project": [
-      [ "Dirac", "v6r17p22",
+      [ "Dirac", "v6r17p23",
         [ "bin", "python", "lib" ]
       ],
-      [ "LHCbGrid", "v11r10",
+      [ "LHCbGrid", "v11r11",
         [ "bin", "python", "lib" ]
       ]
     ]
