@@ -1,3 +1,9 @@
+[v8r8p3]
+use DIRAC v6r17p23
+
+* fix scripts
+* RAWIntegrity: perform the removal by bulk
+
 [v8r8p2]
 use DIRAC v6r17p22
 
